--- a/docker/toolbox/Dockerfile
+++ b/docker/toolbox/Dockerfile
@@ -1,4 +1,5 @@
-FROM alpine
+FROM ubuntu
+
 #RUN apk add --no-cache curl wget busybox-extras netcat-openbsd python py-pip && \
 #    pip install awscli
 #RUN apk --purge -v del py-pip
