--- a/docker/toolbox/Dockerfile
+++ b/docker/toolbox/Dockerfile
@@ -1,18 +1,31 @@
-FROM ubuntu:16.04
-ENV version 4.6.2
-ADD https://s3-us-west-2.amazonaws.com/grafana-releases/release/grafana-$version.linux-x64.tar.gz /grafana/
-WORKDIR /grafana
-WORKDIR /grafana/grafana-$version
+# From & maintainer
+FROM                stakater/base:latest
+MAINTAINER          Rasheed Amir <rasheed@aurorasolutions.io>
 
-RUN tar -zxvf grafana-$version.linux-x64.tar.gz -C ./ && \
+ARG                 GRAFANA_VERSION
 
-rm grafana-$version.linux-x64.tar.gz && \
+# for installing kairosdb datasource
+ENV                 GF_INSTALL_PLUGINS=grafana-kairosdb-datasource
 
-ln -s /grafana/grafana-$version/bin/grafana-server /usr/bin/
+RUN                 apt-get update && \
+                    apt-get -y --no-install-recommends install libfontconfig curl ca-certificates && \
+                    apt-get clean && \
+                    curl https://grafanarel.s3.amazonaws.com/builds/grafana_${GRAFANA_VERSION}_amd64.deb > /tmp/grafana.deb && \
+                    dpkg -i /tmp/grafana.deb && \
+                    rm /tmp/grafana.deb && \
+                    curl -L https://github.com/tianon/gosu/releases/download/1.7/gosu-amd64 > /usr/sbin/gosu && \
+                    chmod +x /usr/sbin/gosu && \
+                    apt-get remove -y curl && \
+                    apt-get autoremove -y && \
+                    rm -rf /var/lib/apt/lists/*
 
-COPY conf .
-CMD ["/usr/bin/grafana-server"]
-docker build -t grafana .
+VOLUME              ["/var/lib/grafana", "/var/lib/grafana/plugins", "/var/log/grafana", "/etc/grafana"]
+
+EXPOSE              3000
+
+COPY                ./run.sh /run.sh
+
+ENTRYPOINT          ["/run.sh"]
 
 #FROM ubuntu
 
